--- a/index.html
+++ b/index.html
@@ -841,7 +841,35 @@
                     </ul>
                 </div>
                 <div class="grid grid-cols-2 gap-6 lg:grid-cols-4 lg:gap-8">
-                    <div class="product-item">
+                    <div>
+                        <div
+                            class="h-[240px] flex items-center justify-center bg-[url('./public/images/product-image.png')] bg-cover bg-center bg-no-repeat">
+                            <img src="./public/images/image-pro.png" alt="" />
+                        </div>
+                        <div class="product-content text-center py-5">
+                            <a href="" class="block mb-2 text-sm font-light text-[#9D9EA2] uppercase">CONCENTRATES</a>
+                            <h3 class="mb-4">
+                                <a href="" class="text-lg text-[#1A1E26]">Mix And Match Shatter/Budder 28g (4 X 7G)</a>
+                            </h3>
+                            <div class="rating mb-4">
+                                <span>4.6/5 | 135</span>
+                                <a href="" class="text-[#C8C9CB]">Reviews</a>
+                            </div>
+                            <span class="inline-block mb-3 bg-[#F2F6F4] py-2 px-4 rounded-lg">Indica 70%</span>
+                            <div class="mb-4">
+                                <span class="text-[#EB2606]">$200.00</span>
+                                <span class="text-[#C8C9CB] text-base">/gram</span>
+                            </div>
+                            <ul
+                                class="mb-4 flex space-x-3 items-center justify-center *:border *:rounded *:py-2 *:px-3">
+                                <li>28g</li>
+                                <li>1/2lb</li>
+                                <li>1/4lb</li>
+                            </ul>
+                            <a href="" class="btn">Add To Cart</a>
+                        </div>
+                    </div>
+                    <div>
                         <div
                             class="h-[240px] flex items-center justify-center bg-[url('./public/images/product-image.png')] bg-cover bg-center bg-no-repeat">
                             <img src="./public/images/image-pro.png" alt="" />
@@ -925,36 +953,6 @@
                             <a href="" class="btn">Add To Cart</a>
                         </div>
                     </div>
-                    <!--End product-item-->
-                    <div>
-                        <div
-                            class="h-[240px] flex items-center justify-center bg-[url('./public/images/product-image.png')] bg-cover bg-center bg-no-repeat">
-                            <img src="./public/images/image-pro.png" alt="" />
-                        </div>
-                        <div class="product-content text-center py-5">
-                            <a href="" class="block mb-2 text-sm font-light text-[#9D9EA2] uppercase">CONCENTRATES</a>
-                            <h3 class="mb-4">
-                                <a href="" class="text-lg text-[#1A1E26]">Mix And Match Shatter/Budder 28g (4 X 7G)</a>
-                            </h3>
-                            <div class="rating mb-4">
-                                <span>4.6/5 | 135</span>
-                                <a href="" class="text-[#C8C9CB]">Reviews</a>
-                            </div>
-                            <span class="inline-block mb-3 bg-[#F2F6F4] py-2 px-4 rounded-lg">Indica 70%</span>
-                            <div class="mb-4">
-                                <span class="text-[#EB2606]">$200.00</span>
-                                <span class="text-[#C8C9CB] text-base">/gram</span>
-                            </div>
-                            <ul
-                                class="mb-4 flex space-x-3 items-center justify-center *:border *:rounded *:py-2 *:px-3">
-                                <li>28g</li>
-                                <li>1/2lb</li>
-                                <li>1/4lb</li>
-                            </ul>
-                            <a href="" class="btn">Add To Cart</a>
-                        </div>
-                    </div>
-                    <!--End product-item-->
                 </div>
             </div>
         </div>
@@ -1092,7 +1090,7 @@
                     Reveal coupon code by entering your email
                 </p>
                 <form action="" class="border-t border-[#346654] pt-10 flex items-center space-x-8">
-                    <input type="text" class="w-full border border-[#346654] rounded-full p-4 lg:p-6"
+                    <input type="text" class="w-full border border-[#346654] rounded-full p-4 lg:p-6 bg-transparent"
                         placeholder="Email Address" />
                     <button class="btn !h-[72px] min-w-[160px]">Reveal coupon</button>
                 </form>
