--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
                     <h4 class="text-[24px]">Filter by Interest</h4>
                 </div>
                 <div class="">
-                    <ul class="flex items-center gap-6">
+                    <ul class="flex items-center gap-6 flex-wrap">
                         <li><a href=""
                                 class="block text-secondary border border-[#05422C] rounded-full py-4 px-5 hover:bg-[#F2F6F4]">Flowers</a>
                         </li>
