--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
             <div class="container">
                 <nav>
                     <ul class="lg:flex items-center justify-center space-x-10 text-[#46494F]">
-                        <li><a href="" class="block py-4">Shop All</a></li>
-                        <li><a href="" class="block py-4">Flower</a></li>
-                        <li><a href="" class="block py-4">Edibles</a></li>
-                        <li><a href="" class="block py-4">Concentrates</a></li>
+                        <li><a href="index.html" class="block py-4">Shop All</a></li>
+                        <li><a href="category.html" class="block py-4">Flower</a></li>
+                        <li><a href="cart.html" class="block py-4">Edibles</a></li>
+                        <li><a href="description.html" class="block py-4">Concentrates</a></li>
                         <li><a href="" class="block py-4">Mushrooms</a></li>
                         <li><a href="" class="block py-4">Promotions/Bundles</a></li>
                         <li><a href="" class="block py-4">Support</a></li>
